fixed letter spacing for highlight title

--- a/css/styles.css
+++ b/css/styles.css
@@ -6152,7 +6152,6 @@ dl, ol, ul {
   font-size: 5rem;
   color: #FFF;
   font-weight: 700;
-  letter-spacing: -1px;
   line-height: 1;
   max-width: 720px;
 }
