--- a/sass/components/_highlight.scss
+++ b/sass/components/_highlight.scss
@@ -51,7 +51,6 @@
   @include font-size(80px, 48px);
   color: $white;
   font-weight: 700;
-  letter-spacing: -1px;
   line-height: 1;
   max-width: 720px;
 
